--- a/css/main.css
+++ b/css/main.css
@@ -69,4 +69,5 @@ a:hover {
 .sidebar-ico#home-btn {margin-bottom: auto; border-bottom: 1px solid var(--border-color-hex);}
 .sidebar-ico#totop-btn {border-top: 1px solid var(--border-color-hex);}
 .sidebar-ico#tobtm-btn {border-top: 1px solid var(--border-color-hex);}
-#index-content { grid-area: 1 / 2 / 2 / 3; backdrop-filter: blur(3px); }
+#index-content { grid-area: 1 / 2 / 2 / 3; backdrop-filter: blur(3px); overflow: hidden; }
+#content-wrapper {}
