--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -63,7 +63,19 @@ display: block;
 }
 #idx-characters::before {top: 0;}
 #idx-characters::after {bottom: 0;}
-.ch-maintitle {}
-.ch-maintitle span {}
-.ch-generation1 {}
+.ch-maintitle {
+font-family: 'Vidaloka';
+    font-size: 4rem;
+    text-align: center;
+}
+#idx-characters .ch-maintitle::first-of-type span {
+font-family: courier;
+    font-size: 13px;
+    display: block;
+    padding-bottom: 5px;
+    margin: 0 17.4rem -5px;
+    border-bottom: 1px solid var(--border-color-hex);
+}
+#idx-characters .ch-maintitle::last-of-type span {}
+.ch-generation1 {margin-bottom: 80px;}
 .ch-generation2 {}
