--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -68,14 +68,14 @@ font-family: 'Vidaloka';
     font-size: 4rem;
     text-align: center;
 }
-#idx-characters .ch-maintitle:first-of-type span {
+#idx-characters .ch-maintitle span {
 font-family: courier;
     font-size: 13px;
     display: block;
     padding-bottom: 5px;
-    margin: 0 17.4rem -5px;
     border-bottom: 1px solid var(--border-color-hex);
 }
-#idx-characters .ch-maintitle:last-of-type span {}
+#idx-characters .ch-maintitle:first-of-type span {margin: 0 17.4rem -5px;}
+#idx-characters .ch-maintitle:last-of-type span {margin: 0 17rem -5px;}
 .ch-generation1 {margin-bottom: 80px;}
 .ch-generation2 {}
