--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -120,5 +120,21 @@ border: 1px solid var(--border-color-hex);
     position: relative;
     font-size: 12px;
 }
-.ch-square {}
+.ch-square {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(8, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+.ch-square .s-bg { grid-area: 2 / 1 / 10 / 3; border: 1px solid var(--border-color-hex); background: rgb(28 51 45 / 70%); }
+.ch-square .s-aes { grid-area: 2 / 1 / 4 / 3; }
+.ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
+.ch-square .s-first { grid-area: 3 / 1 / 5 / 3; }
+.ch-square .s-last { grid-area: 5 / 1 / 6 / 3; }
+.ch-square .s-age { grid-area: 6 / 1 / 7 / 2; }
+.ch-square .s-birth { grid-area: 7 / 1 / 8 / 2; }
+.ch-square .s-signs { grid-area: 8 / 1 / 9 / 2; }
+.ch-square .s-aus { grid-area: 6 / 2 / 9 / 3; }
+
 .ch-rectangle {}
