--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -128,6 +128,7 @@ grid-row-gap: 0px;
 .ch-square .s-bg { grid-area: 2 / 1 / 10 / 3; border: 1px solid var(--border-color-hex); background: rgb(28 51 45 / 70%); }
 .ch-square .s-aes { grid-area: 2 / 1 / 4 / 3; }
 .ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
+.ch-square .s-ico div {}
 .ch-square .s-first { grid-area: 3 / 1 / 5 / 3; }
 .ch-square .s-last { grid-area: 5 / 1 / 6 / 3; }
 .ch-square .s-age { grid-area: 6 / 1 / 7 / 2; }
