--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -133,7 +133,7 @@ grid-row-gap: 0px;
     background-position: 50% 75%;
     min-height: 100px;
 }
-#ch-harvey .s-aes {background-image: linear-gradient(45deg, red, transparent), url(https://images.unsplash.com/photo-1473283456700-12207328ac91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);}
+#ch-harvey .s-aes {background-image: linear-gradient(90deg, rgba(219 52 36 / 40%) 0%, rgba(219 52 36 / 40%) 100%), url(https://images.unsplash.com/photo-1473283456698-12207328ac91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);}
 #ch-mouse .s-aes {background-image: linear-gradient(45deg, pink, transparent), url(https://images.unsplash.com/photo-1582449632319-5247b79dd198?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);}
 #ch-bird .s-aes {background-image: linear-gradient(45deg, blue, transparent), url(https://images.unsplash.com/photo-1521218242219-e25fe97613cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80);}
 .ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
