--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -134,8 +134,8 @@ grid-row-gap: 0px;
     min-height: 100px;
 }
 #ch-harvey .s-aes {background-image: linear-gradient(45deg, rgb(255 0 0 / 40%), transparent), url(https://images.unsplash.com/photo-1473283456700-12207328ac91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);}
-#ch-mouse .s-aes {background-image: linear-gradient(45deg, pink, transparent), url(https://images.unsplash.com/photo-1582449632319-5247b79dd198?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);}
-#ch-bird .s-aes {background-image: linear-gradient(45deg, blue, transparent), url(https://images.unsplash.com/photo-1521218242219-e25fe97613cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80);}
+#ch-mouse .s-aes {background-image: linear-gradient(45deg, rgb(255 192 203 / 40%), transparent), url(https://images.unsplash.com/photo-1582449632319-5247b79dd198?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);}
+#ch-bird .s-aes {background-image: linear-gradient(45deg, rgb(0 0 255 / 40%), transparent), url(https://images.unsplash.com/photo-1521218242219-e25fe97613cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80);}
 .ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
 .ch-square .s-ico div {}
 .ch-square .s-first { grid-area: 3 / 1 / 5 / 3; }
