--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -138,7 +138,15 @@ grid-row-gap: 0px;
 #ch-bird .s-aes {background-image: linear-gradient(45deg, rgb(0 0 255 / 40%), transparent), url(https://images.unsplash.com/photo-1521218242219-e25fe97613cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80);}
 .ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
 .ch-square .s-ico div {}
-.ch-square .s-first { grid-area: 3 / 1 / 5 / 3; }
+.ch-square .s-first {
+  grid-area: 3 / 1 / 5 / 3;
+display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Vidaloka';
+    font-size: 4rem;
+    text-shadow: -1px -1px 0 #0f171a, 1px -1px 0 #0f171a, -1px 1px 0 #0f171a, 1px 1px 0 #0f171a;
+}
 .ch-square .s-last { grid-area: 5 / 1 / 6 / 3; }
 .ch-square .s-age { grid-area: 6 / 1 / 7 / 2; }
 .ch-square .s-birth { grid-area: 7 / 1 / 8 / 2; }
