--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -136,8 +136,23 @@ grid-row-gap: 0px;
 #ch-harvey .s-aes {background-image: linear-gradient(45deg, rgb(255 0 0 / 40%), transparent), url(https://images.unsplash.com/photo-1473283456700-12207328ac91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);}
 #ch-mouse .s-aes {background-image: linear-gradient(45deg, rgb(255 192 203 / 40%), transparent), url(https://images.unsplash.com/photo-1582449632319-5247b79dd198?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);}
 #ch-bird .s-aes {background-image: linear-gradient(45deg, rgb(0 0 255 / 40%), transparent), url(https://images.unsplash.com/photo-1521218242219-e25fe97613cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80);}
-.ch-square .s-ico { grid-area: 1 / 1 / 3 / 3; }
-.ch-square .s-ico div {}
+.ch-square .s-ico {
+  grid-area: 1 / 1 / 3 / 3;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ch-square .s-ico div {
+width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 1px solid var(--border-color-hex);
+  background-size: cover;
+    background-position: center;
+}
+#ch-harvey .s-ico div {background-image: url(https://img.nickpic.host/Aw7N46.gif);}
+#ch-mouse .s-ico div {background-image: url(https://i.pinimg.com/originals/81/e3/d4/81e3d49cab4df7d28b901a5f238d56fb.gif);}
+#ch-bird .s-ico div {background-image: url(https://pa1.narvii.com/6995/20da423fa95524321daca5dfd38872057e706efbr1-500-269_hq.gif);}
 .ch-square .s-first {
   grid-area: 3 / 1 / 5 / 3;
 display: flex;
