--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -172,7 +172,7 @@ display: flex;
 }
 .ch-square .s-age { grid-area: 6 / 1 / 7 / 2; }
 .ch-square .s-birth { grid-area: 7 / 1 / 8 / 2; }
-.ch-square .s-birth span {}
+.ch-square .s-birth span {display: block; width: max-content;}
 .ch-square .s-signs { grid-area: 8 / 1 / 9 / 2; }
 .ch-square .s-aus { grid-area: 6 / 2 / 9 / 3; }
 
