--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -178,7 +178,7 @@ display: flex;
 }
 .ch-square .s-age { grid-area: 6 / 1 / 7 / 2; font-family: 'Vidaloka'; font-size: 1.5rem; }
 .ch-square .s-age::after {display: inline; content: 'yo';}
-.ch-square .s-birth { grid-area: 7 / 1 / 8 / 2; }
+.ch-square .s-birth { grid-area: 7 / 1 / 8 / 2; font-size: .7rem; font-family: courier; }
 .ch-square .s-birth span {display: block; width: max-content;}
 .ch-square .s-signs { grid-area: 8 / 1 / 9 / 3; border-top: 1px solid var(--border-color-hex); }
 .ch-square .s-aus { grid-area: 6 / 2 / 8 / 2; border-left: 1px solid var(--border-color-hex); }
