--- a/kinksheets.css
+++ b/kinksheets.css
@@ -17,18 +17,22 @@ h1 {
     text-align: center;
 }
 
-.Category {
-    margin-bottom: 20px;
-}
-
 .CategoryTitle {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
 }
+.category {
+    margin-bottom: 20px;
+}
 
-.Kink {
+.kink {
     margin-bottom: 10px;
+}
+
+.tooltip {
+    margin-left: 5px;
+    cursor: pointer;
 }
 
 .Explanation {
